Adjusted to work with newer versions of nodejs. WebAssembly is no wart of dom.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": false,
     "noLib": false,
     "outDir": "build",
+    "lib": ["es6", "dom"],                      
     "preserveConstEnums": true,
     "removeComments": true,
     "rootDir": ".",
